--- a/portfolio-details-mix2.html
+++ b/portfolio-details-mix2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - App 3</title>
+  <title>Portfolio Details - Mix 2</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,13 +51,22 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/kiaraeasy1.png" alt="figma board of Kiara">
+                  <img src="assets/img/portfolio/Business_Model_Canvas.jpg" alt="images of 3D Maya projects">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/kiaraeasy2.png" alt="figma board view">
+                  <img src="assets/img/portfolio/Filippo.png" alt="images of 3D Maya projects">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Mockup.png" alt="images of 3D Maya projects">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ditut_dtopView.jpg" alt="images of 3D Maya projects">
+                </div>
+
+               
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -67,17 +76,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: UX/UI Design</li>
-                <li><strong>Client</strong>: Konvergence</li>
-                <li><strong>Project date</strong>: 01 August, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://www.konvergence.it/en/software-solutions/kiara-cloud" target="_blank">www.konvergence.it</a></li>
+                <li><strong>Category</strong>: UX research</li>
+                <li><strong>Client</strong>: Unibo</li>
+                <li><strong>Project date</strong>: January, 2024</li>
+                <li><strong>Project URL</strong>: <a href="assets/ProjectDiTu_DesignBrief.pdf" target="_blank"> Di.Tut.</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A Sales system</h2>
-              <p>I've been in charge for the remake of this front-end software that has been completely renewed with <a href="https://flutter.dev/">Flutter framework </a>. The developers have been following my design, I've been creating the entire prototype and UI kit using <a href="https://www.figma.com/">Figma.</a>
-              The result is a complete responsive application suitable for desktop, POS sysytem, mobile and tablet.
-              </p>
+              <h2>A digital tutoring platform</h2>
+              <p>I performed a User Research with the aim to develop a new platform which could be useful for people who need help in the use of digital technologies. I've been first set up an hypotesis of business model and a benchmark on the available competitor tools, then I moved to the research on the users: scenario and personas have been designed starting from the research results.</p>
             </div>
           </div>
 
